Add favicon and some link pics

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     your tasks.">
     <meta property="og:title" content="SimpleList">
     <meta property="og:description" content="The simple and effective to-do list.">
-    <meta property="og:image" content="pictures/demo_screenshot.jpg"> <!-- needs to be filled in -->
-    <meta property="og:url" content="url.com"> <!-- needs to be filled in -->
+    <meta property="og:image" content="pictures/demo_screenshot.png">
+    <meta property="og:url" content="https://cleanlist.netlify.app/"> <!-- needs to be filled in -->
     <meta name="twitter:card" content="summary">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"> <!-- Animate.css -->
