--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <meta property="og:title" content="SimpleList">
     <meta property="og:description" content="The simple and effective to-do list.">
     <meta property="og:image" content="pictures/demo_screenshot.png">
-    <meta property="og:url" content="https://cleanlist.netlify.app/"> <!-- needs to be filled in -->
+    <meta property="og:url" content="https://cleanlist.netlify.app/">
     <meta name="twitter:card" content="summary">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"> <!-- Animate.css -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io_cleanlist/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io_cleanlist/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io_cleanlist/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io_cleanlist/site.webmanifest">
     <script src="todo_list.js"></script>
 </head>
 
