--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     your tasks.">
     <meta property="og:title" content="SimpleList">
     <meta property="og:description" content="The simple and effective to-do list.">
-    <meta property="og:image" content="pictures/demo_screenshot.png">
+    <meta property="og:image" content="assets/demo_screenshot.png">
     <meta property="og:url" content="https://cleanlist.netlify.app/">
     <meta name="twitter:card" content="summary">
     <link rel="stylesheet" href="style.css">
