Add multiple improvements Improve mobile layout. Improve add task functionality. Small layout improvements.

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
          onclick="activateInputField()">
     -->
     <form id="todo-list-form" class="hide">
-        <input autofocus type="text" aria-label="Enter a new todo item"
-               placeholder="E.g. End world hunger" class="todo-list-input">
+        <textarea rows="2" cols="35" autofocus aria-label="Enter a new todo item"
+                  placeholder="E.g. End world hunger" class="todo-list-input"></textarea>
+        <button class="add-button" aria-label="Add new todo item">ADD</button>
     </form>
 </body>
 
