Change size of FAB button for mobile displays

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 <body>
     <div id="main-div">
         <div class="heading-div">
-            <h1 class="title">05.12.2020</h1>
-            <span class="sub-title">Sat</span>
+            <h1 class="title">06.12.2020</h1>
+            <span class="sub-title">Sun</span>
         </div>
         <h2 class="tasks-heading">Today's tasks</h2>
         <ul class="todo-list js-todo-list"></ul>
         <div class="empty-state">
-            <h3 class="empty-state-title"><span class="strong-text">Add a new task</span> to get started</h2>
+            <h3 class="empty-state-title">Add a new task to get started</h2>
             <svg class ="empty-state-icon" alt="Empty task list icon" width="70" height="80" viewBox="0 0 70 80" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect x="2" y="2" width="66" height="76" fill="white" stroke="#212121" stroke-width="4"/>
                 <rect x="13" y="18" width="20" height="8" fill="#212121"/>
