Clean up color mode button

--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
 
     <!-- Light mode button -->
     <button
-        class="color-mode_btn light-hidden uppercase"
+        class="color-mode_btn light-hidden"
         aria-label="Toggle light mode">
-        Light
         <svg aria-hidden="true">
             <title>Light Mode</title>
             <use href="#sun"></use>
@@ -98,9 +97,8 @@
 
     <!-- Dark mode button -->
     <button
-        class="color-mode_btn dark-hidden uppercase"
+        class="color-mode_btn dark-hidden"
         aria-label="Toggle dark mode">
-        Dark
         <svg aria-hidden="true">
             <title>Dark Mode</title>
             <use href="#moon"></use>
