Change text primary and text secondary color in dark mode

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <button
         class="color-mode_btn light-hidden"
         aria-label="Toggle light mode">
-        <svg id="light-mode-icon" aria-hidden="true">
+        <svg aria-hidden="true">
             <title>Light Mode</title>
             <use href="#sun"></use>
         </svg>
