Improve layout for large devices

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <body>
     <div id="main-div">
         <div class="heading-div">
-            <h1 class="title">06.12.2020</h1>
-            <span class="sub-title">Sun</span>
+            <h1 class="title">07.12.2020</h1>
+            <span class="sub-title">Mon</span>
         </div>
         <h2 class="tasks-heading">Today's tasks</h2>
         <ul class="todo-list js-todo-list"></ul>
@@ -55,7 +55,7 @@
                 corner</span> to add a new task.</p>
         </div>
     </div>
-    <svg class="fab" onclick="activateInputField()" alt="Add new task button" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <svg class="fab animate__animated animate__bounce" onclick="activateInputField()" alt="Add new task button" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
         <line x1="30" x2="30" y2="60" stroke-width="8"/>
         <line y1="29" x2="60" y2="29" stroke-width="8"/>
     </svg>
