Update date automatically

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <button class="add-button" aria-label="Add new todo item">ADD</button>
     </form>
     <script src="toggle_color_mode.js"></script>
+    <script src="change_date.js"></script>
 </body>
 
 </html>
