--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 </head>
 
 <body>
+    <span class="progress-indicator" style="width:0%;"></span>
     <div id="main-div">
         <div class="heading-div">
             <h1 class="title">07.12.2020</h1>
