Update some meta tags and a header in the README

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CleanList - The most effective to-do list</title>
+    <title>Clean List - The most effective to-do list</title>
     <meta name="description" content="A simple and effective way of planning
     your tasks.">
-    <meta property="og:title" content="CleanList">
+    <meta property="og:title" content="Clean List">
     <meta property="og:description" content="The simple and effective to-do list.">
     <meta property="og:image" content="assets/demo_screenshot.png">
-    <meta property="og:url" content="https://cleanlist.netlify.app/">
+    <meta property="og:url" content="https://www.cleanlist.dev/">
     <meta name="twitter:card" content="summary">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"> <!-- Animate.css -->
@@ -106,5 +106,4 @@
     <script src="toggle_color_mode.js"></script>
     <script src="change_date.js"></script>
 </body>
-
 </html>
